Fix page load flicker

--- a/style.css
+++ b/style.css
@@ -107,12 +107,11 @@ button {
   border: none;
   font-size: 1rem;
   letter-spacing: 1px;
-  opacity: 1;
-  transition: 0.3s;
 }
 
 button:hover {
   cursor: pointer;
+  transition: 0.3s;
 }
 
 button.freetrial {
@@ -169,6 +168,6 @@ form {
   p,
   h1 {
     text-align: left;
-    margin: 1.5rem;
+    margin: 1.5rem 1.5rem 1.5rem 0;
   }
 }
